--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ repositories {
 }
 
 apply plugin: 'java'
+apply plugin: 'findbugs'
 
 dependencies {
     testCompile 'junit:junit:4.12', 'org.mockito:mockito-all:1.10.19'
