--- a/build.gradle
+++ b/build.gradle
@@ -100,13 +100,14 @@ findbugs {
 pitest {
     targetClasses = ['com.asprotunity.queryiteasy.*']  //by default "${project.group}.*"
     mainSourceSets = [sourceSets.main]
-    threads = 4
+    testSourceSets = [sourceSets.test, sourceSets.acceptanceTest]
+    threads = 1
     outputFormats = ['XML', 'HTML']
 }
 
 dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3', 'junit:junit:4.12', 'org.mockito:mockito-all:1.10.19'
-    acceptanceTestCompile 'org.hsqldb:hsqldb:2.3.3', files(file('jdbclibs').listFiles())
+    acceptanceTestCompile 'org.hsqldb:hsqldb:2.3.3', files(file('jdbclibs').listFiles().findAll {it.name.endsWith('.jar')})
 }
 
 idea {
