--- a/build.gradle
+++ b/build.gradle
@@ -67,9 +67,21 @@ pitest {
     outputFormats = ['XML', 'HTML']
 }
 
+subprojects {
+    apply plugin: 'java'
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        compile rootProject, 'org.hsqldb:hsqldb:2.3.3', 'org.postgresql:postgresql:9.4.1209.jre7'
+    }
+}
+
 dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3', 'junit:junit:4.12', 'org.mockito:mockito-all:1.10.19'
-    acceptanceTestCompile 'org.hsqldb:hsqldb:2.3.3', files(file('jdbclibs').listFiles().findAll {it.name.endsWith('.jar')})
+    acceptanceTestCompile 'org.hsqldb:hsqldb:2.3.3', 'org.postgresql:postgresql:9.4.1209.jre7',
+            'mysql:mysql-connector-java:5.1.38', files(file('jdbclibs').listFiles().findAll {it.name.endsWith('.jar')})
 }
 
 idea {
