--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 version=1.0.2
+group = com.asprotunity
+repo = queryiteasy
+# Project admin
+repositoryUrl = https://github.com/gasproni/queryiteasy
+
