--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.1.9'
+        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.1.10'
     }
 }
 
 plugins {
-    id 'net.researchgate.release' version '2.4.0'
+    id 'net.researchgate.release' version '2.4.1'
 }
 
 repositories {
@@ -36,7 +36,7 @@ sourceSets {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.9'
+    gradleVersion = '3.1'
 }
 
 task acceptanceTest(type: Test, dependsOn: test) {
@@ -44,8 +44,8 @@ task acceptanceTest(type: Test, dependsOn: test) {
     group = 'verification'
     setTestClassesDir(sourceSets.acceptanceTest.output.classesDir)
     setClasspath(sourceSets.acceptanceTest.runtimeClasspath)
-    reports.junitXml.destination = buildDir.path +'/acceptance-test-results'
-    reports.html.destination = buildDir.path +'/reports/acceptanceTest'
+    reports.junitXml.destination = buildDir.path + '/acceptance-test-results'
+    reports.html.destination = buildDir.path + '/reports/acceptanceTest'
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -144,7 +144,9 @@ subprojects {
 dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3', 'junit:junit:4.12', 'org.mockito:mockito-all:1.10.19'
     acceptanceTestCompile 'org.hsqldb:hsqldb:2.3.3', 'org.postgresql:postgresql:9.4.1209.jre7',
-            'mysql:mysql-connector-java:5.1.38', files(file('jdbclibs').listFiles().findAll {it.name.endsWith('.jar')})
+            'mysql:mysql-connector-java:5.1.38', files(file('jdbclibs').listFiles().findAll {
+        it.name.endsWith('.jar')
+    })
 }
 
 idea {
